[project]
name = "devops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi[standard]>=0.115.12",
    "loguru>=0.7.3",
    "paramiko>=3.5.1",
    "psycopg-pool>=3.2.6",
    "psycopg[binary]>=3.2.6",
    "pyjwt>=2.10.1",
    "requests>=2.32.3",
    "toml>=0.10.2",
]
